made a lot of changes in controllers, residents can now add vechicles and enhanced views

--- a/B&S Skyline.csproj
+++ b/B&S Skyline.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="FirebaseDatabase.net" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
